Updates to project files

--- a/Executable/Executable.csproj
+++ b/Executable/Executable.csproj
@@ -74,4 +74,8 @@
   <ItemGroup>
     <Content Include="poderosa.ico" />
   </ItemGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
